--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -48,7 +49,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add package.json
           git commit -m "Bump version to ${{ steps.increment-version.outputs.new_version }}"
-          git push
+          git push origin HEAD:main
 
       - name: Build package
         run: npm run build
