--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -18,7 +18,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -29,27 +28,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Get current version
-        id: current-version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
-
-      - name: Increment patch version
-        id: increment-version
-        run: |
-          CURRENT_VERSION=$(node -p "require('./package.json').version")
-          IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
-          NEW_VERSION="$major.$minor.$((patch + 1))"
-          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Update package.json version
-        run: |
-          npm version ${{ steps.increment-version.outputs.new_version }} --no-git-tag-version
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add package.json
-          git commit -m "Bump version to ${{ steps.increment-version.outputs.new_version }}"
-          git push origin HEAD:main
 
       - name: Build package
         run: npm run build
@@ -62,8 +40,8 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          name: v${{ steps.increment-version.outputs.new_version }}
-          tag_name: v${{ steps.increment-version.outputs.new_version }}
+          name: v${{ github.ref_name }}
+          tag_name: v${{ github.ref_name }}
           body: |
             ## What's Changed
 
@@ -84,5 +62,3 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
