--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -10,6 +10,9 @@ on:
       - 'rollup.config.mjs'
       - 'tsconfig.json'
 
+permissions:
+  contents: write
+
 jobs:
   package:
     runs-on: ubuntu-latest
@@ -39,6 +42,8 @@ jobs:
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           name: v${{ github.ref_name }}
           tag_name: v${{ github.ref_name }}
