--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vertical-feed",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "A React component for creating vertical media feeds (videos) similar to TikTok or Instagram",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -18,8 +18,12 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major",
+    "release:patch": "standard-version --release-as patch",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push --follow-tags"
   },
   "keywords": [
     "react",
@@ -52,6 +56,10 @@
     "react-dom": ">=17.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.1",
+    "husky": "^9.0.11",
+    "standard-version": "^9.5.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
