--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "release:major": "standard-version --release-as major",
     "release:patch": "standard-version --release-as patch",
     "version": "npm run format && git add -A src",
-    "postversion": "git push --follow-tags"
+    "postversion": "git push --follow-tags",
+    "size": "size-limit",
+    "analyze": "rollup -c --config-option analyze=true"
   },
   "keywords": [
     "react",
@@ -86,6 +88,18 @@
     "ts-jest": "^29.3.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^6.2.6"
-  }
+    "vite": "^6.2.6",
+    "size-limit": "^8.0.0",
+    "rollup-plugin-visualizer": "^5.12.0"
+  },
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/index.esm.js",
+      "limit": "10 KB"
+    }
+  ]
 }
