--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@size-limit/file": "^11.2.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -84,13 +85,13 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "size-limit": "^11.2.0",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.3.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^6.2.6",
-    "size-limit": "^8.0.0",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "vite": "^6.2.6"
   },
   "size-limit": [
     {
