--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -49,8 +49,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: v${{ github.ref_name }}
-          tag_name: v${{ github.ref_name }}
+          name: ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
           body: |
             ## What's Changed
 
