chore: improve release process with automated npm and github releases

--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major",
-    "release:patch": "standard-version --release-as patch",
+    "release": "standard-version && npm run publish-release",
+    "release:minor": "standard-version --release-as minor && npm run publish-release",
+    "release:major": "standard-version --release-as major && npm run publish-release",
+    "release:patch": "standard-version --release-as patch && npm run publish-release",
+    "publish-release": "npm run build && npm publish && gh release create $(node -p \"require('./package.json').version\") --title \"v$(node -p \"require('./package.json').version\")\" --notes \"$(git log -1 --pretty=%B)\"",
     "version": "npm run format && git add -A src",
     "postversion": "git push --follow-tags",
     "size": "size-limit",
